--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,4 +1,14 @@
+blank_issues_enabled: false
 contact_links:
-  - name: Discussions
+  - name: 💬 Discussions
     url: https://github.com/Schero94/Magicmark/discussions
-    about: Use discussions for improvements and/or questions
+    about: Ask questions, share ideas, and discuss with the community
+  - name: 📖 Documentation
+    url: https://github.com/Schero94/Magicmark#readme
+    about: Read the full documentation and setup guide
+  - name: 🐛 Existing Issues
+    url: https://github.com/Schero94/Magicmark/issues
+    about: Check if your issue has already been reported
+  - name: ⭐ Star on GitHub
+    url: https://github.com/Schero94/Magicmark
+    about: Show your support by starring the repository
