--- a/package.json
+++ b/package.json
@@ -74,10 +74,12 @@
     "typescript": "^5.9.3"
   },
   "optionalDependencies": {
-    "@swc/core-darwin-arm64": "^1.13.21",
-    "@swc/core-linux-x64-gnu": "^1.13.21",
-    "@rollup/rollup-darwin-arm64": "^4.30.1",
-    "@rollup/rollup-linux-x64-gnu": "^4.30.1"
+    "@swc/core-darwin-arm64": "*",
+    "@swc/core-linux-x64-gnu": "*",
+    "@swc/core-linux-x64-musl": "*",
+    "@rollup/rollup-darwin-arm64": "*",
+    "@rollup/rollup-linux-x64-gnu": "*",
+    "@rollup/rollup-linux-x64-musl": "*"
   },
   "peerDependencies": {
     "@strapi/sdk-plugin": "^5.3.2",
